<resources>
    <string name="app_name">Android Login and Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="main_tV_01">Write a post</string>
    <string name="main_eT_01_hint">Write here</string>
    <string name="btn_post">POST</string>
    <string name="approve">APPROVE</string>
    <string name="unapprove">UNAPPROVE</string>
</resources>
