<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="18dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            tools:layout_editor_absoluteX="280dp"
            android:layout_marginTop="296dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="301dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintVertical_bias="0.100000024">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/lbl_name"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp" />

            <TextView
                android:text="@string/main_tV_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tV_01"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <EditText
                android:layout_width="match_parent"
                android:ems="10"
                android:id="@+id/eT_01"
                android:inputType="textMultiLine|textLongMessage"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:singleLine="false"
                android:selectAllOnFocus="false"
                android:hint="@string/main_eT_01_hint"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="top|left"
                android:textAlignment="gravity" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>